# PruebaTecnica_Ikerlan

./: .gitignore  CMakeLists.txt  Notas
common/: tools.h  tools_cpp.h
set1/exercise1/: CMakeLists.txt  main.c  text.c
set1/exercise2/: CMakeLists.txt  main.c
set1/exercise3/: CMakeLists.txt  main.c
set1/exercise4/: CMakeLists.txt  main.cpp
set1/exercise5/: CMakeLists.txt  main.cpp
set1/exercise6/: CMakeLists.txt  main.cpp
set1/exercise7/: CMakeLists.txt  main.cpp
set1/exercise8/: CMakeLists.txt  main.cpp
set2/exercise10/: CMakeLists.txt  main.cpp
set2/exercise11/: CMakeLists.txt  main.cpp
set2/exercise12/: CMakeLists.txt  main.cpp
set2/exercise13/: CMakeLists.txt  main.cpp
set2/exercise14/: CMakeLists.txt  main.cpp
set2/exercise15/: CMakeLists.txt  main.cpp
set2/exercise16/: CMakeLists.txt  main.cpp
set2/exercise9/: CMakeLists.txt  main.cpp
set3/exercise18/: CMakeLists.txt  main.cpp
set3/exercise21/: CMakeLists.txt  main.cpp
set3/exercise22/: CMakeLists.txt  main.cpp
set3/exercise23/: CMakeLists.txt  main.cpp
set3/exercise24/: CMakeLists.txt  main.cpp
